--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,45 +1,59 @@
 .container {
     display: flex;
+    height: 100vh;
   }
   
-  .column1 {
-    flex-basis: 50%;
+  .first-half {
+    flex: 1;
     background-color: #2952BB;
-
-  }
-  .column2 {
-    flex-basis: 50%;
-    
-
-  }
-  .header-text {
-    color: white;
-  }
-
-  header {
+    color: #fff;
+    padding: 50px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-   
-    padding: 20px;
-   
   }
   
   .logo {
+    margin-right: 20px;
+  }
+  
+  .header h1 {
+    margin: 0;
+  }
+  
+  .login-half {
+    flex: 1;
+    background-color: #fff;
     display: flex;
+    justify-content: center;
     align-items: center;
   }
   
-  .logo img {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
   }
   
-  .logo h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-    color: #333333;
+  label {
+    margin-bottom: 10px;
+  }
+  
+  input {
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #2952BB;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
   
