--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,27 @@
 <div class="container">
-  <div class="column1">
-    <header>
-        <div class="logo header-text">
-          <img src="assets/Logo.svg" alt="Unibell logo">
-          <h1>Unibell</h1>
+    <div class="first-half">
+      <div class="logo">
+        <img src="assets/Logo.png" alt="Logo">
+      </div>
+      <div class="header">
+        <h1>Unibell</h1>
+      </div>
+      <div class="description">
+        <p>Welcome to Unibell. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    <div class="login-half">
+      <form>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
         </div>
-      </header>
-      
-
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">Login</button>
+      </form>
+    </div>
   </div>
-  <div class="column2">
-    Column 2
-</div>
-</div>
+  
