--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,34 @@
 <div class="container">
-    <div class="first-half">
-      <div class="logo">
-        <img src="assets/Logo.png" alt="Logo">
-      </div>
-      <div class="header">
-        <h1>Unibell</h1>
-      </div>
-      <div class="description">
-        <p>Welcome to Unibell. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
+  <div class="first-half">
+    <div class="logo">
+      <span class ="headerName">
+        Unibell
+      </span>
+      <img src="assets/Logo.png" alt="Logo">
     </div>
-    <div class="login-half">
-      <form>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit">Login</button>
-      </form>
+
+    <div class="description">
+      <h1>One system for all your billing needs.</h1>
+      <p>One system for all your billing needs. Simplify your life and let us handle the details. Our all-in-one system allows you to manage your electricity, telephone, and water bills in a single, easy-to-use platform.</p>
     </div>
   </div>
-  
+  <div class="login-half">
+<div>
+  <h1>Login</h1>
+
+    <form>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input placeholder="Email" type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input placeholder="Password" type="password" id="password" name="password" required>
+      </div>
+      <button type="submit">Login</button>
+
+      <p class="haveAccount">Don’t have an account? <span class="register">Register</span> </p>
+    </form>
+  </div>
+  </div>
+</div>
