--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,4 +1,5 @@
 <table class ="tableContainer">
+
   <tr>
     <th>Invoice Id</th>
     <th>Date</th>
@@ -9,12 +10,15 @@
 
 
   </tr>
+
   <tr>
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
     <td>france</td>
     <td>Italy</td>
+    <td>Italy</td>
+
   </tr>
   <tr>
     <td>Centro comercial Moctezuma</td>
@@ -22,5 +26,7 @@
     <td>Mexico</td>
     <td>Simplawen</td>
     <td>Egypt</td>
+    <td>Egypt</td>
+
   </tr>
 </table>
