--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -43,7 +43,7 @@ text-align: center;
   padding: 10px 10px;
   border-radius: 8px;
   color: #797979;
-  transition: color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 
 }
 
