--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,50 +1,81 @@
 <div class="container">
   <div class="first-half">
     <div class="logo">
-      <span class="headerName">
-        Unibell
-      </span>
-      <img src="assets/Logo.png" alt="Logo">
+      <span class="headerName"> Unibell </span>
+      <img src="assets/Logo.png" alt="Logo" />
     </div>
 
     <div class="description">
       <h1>One system for all your billing needs.</h1>
-      <p>One system for all your billing needs. Simplify your life and let us handle the details. Our all-in-one system
-        allows you to manage your electricity, telephone, and water bills in a single, easy-to-use platform.</p>
+      <p>
+        One system for all your billing needs. Simplify your life and let us
+        handle the details. Our all-in-one system allows you to manage your
+        electricity, telephone, and water bills in a single, easy-to-use
+        platform.
+      </p>
     </div>
   </div>
 
   <div class="login-half">
     <div>
-
       <h1>Login</h1>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Email</label>
-          <input placeholder="Email" type="email" id="email" name="email" formControlName="email"
-            [ngClass]="{'errorStyle': loginForm.get('email').invalid && (loginForm.get('email').dirty || loginForm.get('email').touched)}">
+          <input
+            placeholder="Email"
+            type="email"
+            id="email"
+            name="email"
+            formControlName="email"
+            [ngClass]="{
+              errorStyle:
+                loginForm.get('email').invalid &&
+                (loginForm.get('email').dirty || loginForm.get('email').touched)
+            }"
+          />
         </div>
-        <div *ngIf="loginForm.get('email').invalid && (loginForm.get('email').dirty || loginForm.get('email').touched)"
-          class="errorMessage">
-
+        <div
+          *ngIf="
+            loginForm.get('email').invalid &&
+            (loginForm.get('email').dirty || loginForm.get('email').touched)
+          "
+          class="errorMessage"
+        >
           Please type a vaild Email
-
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input placeholder="Password" type="password" id="password" name="password" formControlName="password"
-            [ngClass]="{'errorStyle': loginForm.get('password').invalid && (loginForm.get('password').dirty || loginForm.get('password').touched)}">
+          <input
+            placeholder="Password"
+            type="password"
+            id="password"
+            name="password"
+            formControlName="password"
+            [ngClass]="{
+              errorStyle:
+                loginForm.get('password').invalid &&
+                (loginForm.get('password').dirty ||
+                  loginForm.get('password').touched)
+            }"
+          />
         </div>
 
-        <div *ngIf="loginForm.get('password').invalid && (loginForm.get('password').dirty || loginForm.get('password').touched)"
-          class="errorMessage">
-
+        <div
+          *ngIf="
+            loginForm.get('password').invalid &&
+            (loginForm.get('password').dirty ||
+              loginForm.get('password').touched)
+          "
+          class="errorMessage"
+        >
           Please type a vaild Password
-
         </div>
         <button type="submit">Login</button>
 
-        <p class="haveAccount">Don’t have an account? <span class="register">Register</span> </p>
+        <p class="haveAccount">
+          Don’t have an account? <span class="register">Register</span>
+        </p>
       </form>
     </div>
   </div>
