--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,42 +1,131 @@
 <div class="container">
   <div class="first-half">
     <div class="logo">
-      <span class ="headerName">
-        Unibell
-      </span>
-      <img src="assets/Logo.png" alt="Logo">
+      <span class="headerName"> Unibell </span>
+      <img src="assets/Logo.png" alt="Logo" />
     </div>
 
     <div class="description">
       <h1>One system for all your billing needs.</h1>
-      <p>One system for all your billing needs. Simplify your life and let us handle the details. Our all-in-one system allows you to manage your electricity, telephone, and water bills in a single, easy-to-use platform.</p>
+      <p>
+        One system for all your billing needs. Simplify your life and let us
+        handle the details. Our all-in-one system allows you to manage your
+        electricity, telephone, and water bills in a single, easy-to-use
+        platform.
+      </p>
     </div>
   </div>
   <div class="login-half">
-<div>
-  <h1>Signup</h1>
+    <div>
+      <h1>Signup</h1>
 
-    <form>
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input placeholder="Full Name" type="text"   required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input placeholder="Email" type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Phone Number</label>
-        <input placeholder="Password" type="password" id="password" name="password" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input placeholder="Password" type="password" id="password" name="password" required>
-      </div>
-      <button type="submit">Signup</button>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            placeholder="Full Name"
+            type="text"
+            formControlName="fullName"
+            [ngClass]="{
+              errorStyle:
+                signupForm.get('fullName').invalid &&
+                (signupForm.get('fullName').dirty ||
+                  signupForm.get('fullName').touched)
+            }"
+          />
+          <div
+            *ngIf="
+              signupForm.get('fullName').invalid &&
+              (signupForm.get('fullName').dirty ||
+                signupForm.get('fullName').touched)
+            "
+            class="errorMessage"
+          >
+            Please type a vaild name
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            placeholder="Email"
+            type="email"
+            id="email"
+            name="email"
+            formControlName="email"
+            [ngClass]="{
+              errorStyle:
+                signupForm.get('email').invalid &&
+                (signupForm.get('email').dirty ||
+                  signupForm.get('email').touched)
+            }"
+          />
+          <div
+            *ngIf="
+              signupForm.get('email').invalid &&
+              (signupForm.get('email').dirty || signupForm.get('email').touched)
+            "
+            class="errorMessage"
+          >
+            Please type a vaild Email
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input
+            placeholder="Phone Number"
+            type="tel"
+            id="phone"
+            name="phone"
+            formControlName="phone"
+            [ngClass]="{
+              errorStyle:
+                signupForm.get('phone').invalid &&
+                (signupForm.get('phone').dirty ||
+                  signupForm.get('phone').touched)
+            }"
+          />
+          <div
+            *ngIf="
+              signupForm.get('phone').invalid &&
+              (signupForm.get('phone').dirty || signupForm.get('phone').touched)
+            "
+            class="errorMessage"
+          >
+            Please type a vaild phone number
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            placeholder="Password"
+            type="password"
+            id="password"
+            name="password"
+            formControlName="password"
+            [ngClass]="{
+              errorStyle:
+                signupForm.get('password').invalid &&
+                (signupForm.get('password').dirty ||
+                  signupForm.get('password').touched)
+            }"
+          />
+          <div
+            *ngIf="
+              signupForm.get('password').invalid &&
+              (signupForm.get('password').dirty ||
+                signupForm.get('password').touched)
+            "
+            class="errorMessage"
+          >
+            Please type a vaild password (Minimum 5 letters)
+          </div>
+        </div>
+        <button type="submit">Signup</button>
 
-      <p class="haveAccount">Already have an accoubt? <span class="register">Login</span> </p>
-    </form>
-  </div>
+        <p class="haveAccount">
+          Already have an account? <span class="register">Login</span>
+        </p>
+      </form>
+    </div>
   </div>
 </div>
