--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -5,10 +5,10 @@
   </div>
   <div class="routes">
 
-    <a class="items" routerLink="/NavBar">Dashboard</a>
-    <a class="items" routerLink="/NavBar">Electricity Bills</a>
-    <a class="items" routerLink="/NavBar">Water Bills</a>
-    <a class="items" routerLink="/NavBar">Telephone Bills</a>
+    <a class="items" routerLink="/Dashboard">Dashboard</a>
+    <a class="items" routerLink="/Dashboard">Electricity Bills</a>
+    <a class="items" routerLink="/Dashboard">Water Bills</a>
+    <a class="items" routerLink="/Dashboard">Telephone Bills</a>
 
   </div>
 
