--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,5 +1,5 @@
 <table class ="tableContainer">
-
+<thead>
   <tr>
     <th>Invoice Id</th>
     <th>Date</th>
@@ -7,26 +7,18 @@
     <th>Due Date</th>
     <th>Status</th>
     <th>Type</th>
+  </tr>
+</thead>
 
+  <tr *ngFor="let bill of bills">
+
+    <td>{{bill.id}}</td>
+    <td>{{bill.date}}</td>
+    <td>{{bill.amount}}</td>
+    <td>{{bill.dueDate}}</td>
+    <td>{{bill.status}}</td>
+    <td>{{bill.type}}</td>
 
   </tr>
 
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>france</td>
-    <td>Italy</td>
-    <td>Italy</td>
-
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-    <td>Simplawen</td>
-    <td>Egypt</td>
-    <td>Egypt</td>
-
-  </tr>
 </table>
