--- a/src/app/shared/table/table.component.css
+++ b/src/app/shared/table/table.component.css
@@ -7,7 +7,8 @@
   font-size: 13px;
   line-height: 150%;
   text-align: center;
-  width: fit-content;
+  width: 100%;
+  border-radius: 4px;
 }
 th {
 
@@ -15,7 +16,7 @@ th {
 }
 td,th {
 
-  padding: 10px 10px;
+  padding: 20px 10px;
 }
 table {
   border-collapse: collapse;
