--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -32,11 +32,11 @@
       <h1>Latest Invoices</h1>
     </div>
     <div class="searchBar">
-      <app-search-bar></app-search-bar>
+      <app-search-bar (billList)="recieveBill($event)"></app-search-bar>
     </div>
 
     <div class="invoicesTable">
-      <app-table [bills] = "bills"></app-table>
+      <app-table [bills] = "bills" [searchedBills]="bills" ></app-table>
     </div>
 
 
