--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,3 +1,4 @@
 
-  <input class="searchBar" type="text" placeholder="search">
+  <input class="searchBar" [(ngModel)]="searchedString" type="text" placeholder="search">
+  <button (click)="searchBills()">Search</button>
 
