payment type added to the user

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -128,7 +128,7 @@
               <input
                 type="radio"
                 name="billing-system"
-                value="postpaid"
+                value="0"
                 id="post-paid"
                 formControlName="billingSystem"
               />
@@ -138,7 +138,7 @@
               <input
                 type="radio"
                 name="billing-system"
-                value="prepaid"
+                value="1"
                 id="pre-paid"
                 formControlName="billingSystem"
               />
