--- a/src/app/shared/invoice/invoice.component.css
+++ b/src/app/shared/invoice/invoice.component.css
@@ -1,69 +1,134 @@
 .middle-box {
-  position: absolute;
-  width: 564px;
-  height: 506px;
-  top: 215px;
-  left: 312px;
-  padding: 24px;
-  display: grid;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  -webkit-justify-content: space-between; /* for Safari and Chrome */
+  align-items: center;
+  padding: 24px;
   gap: 32px;
-  -webkit-gap: 32px; /* for Safari and Chrome */
-  border-radius: 10px;
-  border: 2px solid #ccc;
+  position: absolute;
+  width: 600px;
+  height: 506px;
+  left: 312px;
+  top: 215px;
+  background: #ffffff;
+  border: 1px solid #cbcbcb;
+  border-radius: 20px;
 }
-
-.uni {
-  width: 44px;
-  height: 15px;
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+.title {
   font-family: "Montserrat";
-  font-style: normal;
   font-weight: 700;
   font-size: 12.5112px;
   line-height: 15px;
   color: #cbcbcb;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
 }
-
-.invoice-id {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 184px;
-}
-
-.invoice {
+.invoice-data {
   font-family: "Poppins";
-  font-style: normal;
   font-weight: 600;
   font-size: 32px;
   line-height: 48px;
   letter-spacing: 0.035em;
   color: #2952bb;
 }
+.invoice-id-title,
+.second-title,
+.third-title {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #797979;
+}
+.invoice-id,
+.name,
+.phone,
+.address,
+.apartment,
+.due,
+.new,
+.old,
+.units {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #000000;
+}
 
-.idtitle {
-  width: 59px;
+.charge {
+  width: 77px;
+  height: 60px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 30px;
+  color: #afc6ff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  padding: 7px;
+}
+.amount-title,
+.not-paid-title {
+  width: 134px;
   height: 18px;
-  padding: 20px;
-  margin-left: 70px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 18px;
-  /* identical to box height */
-
-  /* Secondary/Gray Text */
-
-  color: #797979;
-
-  /* Inside auto layout */
-
+  color: #afc6ff;
   flex: none;
   order: 0;
   flex-grow: 0;
+  padding-left: 30px;
+}
+.line {
+  width: 74px;
+  height: 0px;
+  border: 1px solid rgba(175, 198, 255, 0.5);
+  transform: rotate(90deg);
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+.blue-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 25px 27px;
+  gap: 16px;
+  width: 500px;
+  height: auto;
+  background: #2952bb;
+  border-radius: 10px;
+  flex: none;
+  order: 3;
+  align-self: stretch;
+  flex-grow: 0;
+}
+.money {
+  width: 83px;
+  height: 36px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #ffffff;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  padding-left: 25px;
 }
