--- a/src/app/electricity-invoice/electricity-invoice.component.html
+++ b/src/app/electricity-invoice/electricity-invoice.component.html
@@ -10,5 +10,6 @@
       <h1>Electricity Invoice</h1>
     </div>
     <app-invoice> </app-invoice>
+    <app-payment></app-payment>
   </main>
 </div>
