--- a/src/app/shared/payment/payment.component.css
+++ b/src/app/shared/payment/payment.component.css
@@ -99,7 +99,7 @@ form {
   color: #fff;
   border: none;
   cursor: pointer;
-  width: 463px;
+  width: 100%;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
