--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,16 +1,31 @@
 <div class="container">
-
   <div class="header">
-    <img src="../../../assets/Logo.svg" alt="">
+    <img src="../../../assets/Logo.svg" alt="" />
   </div>
   <div class="routes">
-
-    <a class="items" routerLink="/Dashboard">Dashboard</a>
-    <a class="items" routerLink="/Dashboard">Electricity Bills</a>
-    <a class="items" routerLink="/Dashboard">Water Bills</a>
-    <a class="items" routerLink="/Dashboard">Telephone Bills</a>
-
+    <div class="items">
+      <a routerLink="/Dashboard">
+        <img src="../../../assets/dash.svg" alt="" class="icons" />
+        Dashboard
+      </a>
+    </div>
+    <div class="items">
+      <a routerLink="/Dashboard">
+        <img src="../../../assets/Lightning.svg" alt="" class="icons" />
+        Electricity Bills</a
+      >
+    </div>
+    <div class="items">
+      <a routerLink="/Dashboard">
+        <img src="../../../assets/Water.svg" alt="" class="icons" />
+        Water Bills</a
+      >
+    </div>
+    <div class="items">
+      <a routerLink="/Dashboard">
+        <img src="../../../assets/Call.svg" alt="" class="icons" />
+        Telephone Bills</a
+      >
+    </div>
   </div>
-
-
 </div>
