--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 
   <input class="searchBar" [(ngModel)]="searchedString" type="text" placeholder="search">
-  <button (click)="searchBills()">Search</button>
+  <button  class="blue-button"  (click)="searchBills()" >Search</button>
 
