--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -5,5 +5,5 @@
     The page you are looking for might have been removed, had its name changed,
     or is temporarily unavailable.
   </p>
-  <a routerLink="/DashBoard" class="btn">Go back to homepage</a>
+  <a routerLink="/Dash-Board" class="btn">Go back to homepage</a>
 </div>
