--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,8 +1,7 @@
-
-  <input class="searchBar" [(ngModel)]="searchedString" type="text" placeholder="search">
-<<<<<<< HEAD
-  <button  class="blue-button">Search</button>
-=======
-  <button >Search</button>
->>>>>>> 33a7e06c2e6554c76c7d5b324ed5e92826d85f81
-
+<input
+  class="searchBar"
+  [(ngModel)]="searchedString"
+  type="text"
+  placeholder="Search..."
+/>
+<button class="blue-button">Search</button>
