--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -5,7 +5,8 @@
   <div class="routes">
     <div class="items">
       <a routerLink="/Dashboard">
-        <img src="../../../assets/dash.svg" alt="" class="icons" />
+        <img src="../../../assets/Dash.svg" alt="" class="icons" />
+
         Dashboard
       </a>
     </div>
