--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -4,26 +4,25 @@
   </div>
   <div class="routes">
     <div class="items">
-      <a routerLink="/Dashboard">
+      <a routerLink="/Dash-Board">
         <img src="../../../assets/Dash.svg" alt="" class="icons" />
-
         Dashboard
       </a>
     </div>
     <div class="items">
-      <a routerLink="/Dashboard">
+      <a routerLink="/Dash-Board/Electricty">
         <img src="../../../assets/Lightning.svg" alt="" class="icons" />
         Electricity Bills</a
       >
     </div>
     <div class="items">
-      <a routerLink="/Dashboard">
+      <a routerLink="/Dash-Board/Water">
         <img src="../../../assets/Water.svg" alt="" class="icons" />
         Water Bills</a
       >
     </div>
     <div class="items">
-      <a routerLink="/Dashboard">
+      <a routerLink="/Dash-Board/Telephone">
         <img src="../../../assets/Call.svg" alt="" class="icons" />
         Telephone Bills</a
       >
