--- a/src/app/Admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/Admin/admin-dashboard/admin-dashboard.component.css
@@ -1,3 +1,15 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 60px;
+  box-sizing: border-box;
+  margin-top: 20px;
+}
+
 .tableContainer {
   border: 1px solid #cbcbcb;
   border-radius: 4px;
@@ -7,21 +19,19 @@
   font-size: 13px;
   line-height: 150%;
   text-align: center;
-  width: 500px;
+  width: 60%;
   border-radius: 4px;
 }
 th {
-
   color: #797979;
 }
-td,th {
-
+td,
+th {
   padding: 20px 10px;
 }
 table {
   border-collapse: collapse;
 }
-table tr{
+table tr {
   border-bottom: 1px solid #cbcbcb;
 }
-
