--- a/src/app/shared/payment/payment.component.css
+++ b/src/app/shared/payment/payment.component.css
@@ -2,8 +2,8 @@
   display: flex;
   padding: 24px;
   position: absolute;
-  left: 1042px;
-  top: 216px;
+  left: 40%;
+  top: 20%;
   border: 1px solid #cbcbcb;
   border-radius: 20px;
   width: 24%;
