--- a/src/app/shared/payment/payment.component.html
+++ b/src/app/shared/payment/payment.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="payment-box">
   <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
     <h1>Payment Information</h1>
