--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -19,7 +19,7 @@
     <div>
       <h1>Signup</h1>
 
-      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="signupForm" >
         <div class="form-group">
           <label for="name">Name</label>
           <input
