--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,12 @@ main{
   margin-inline-start: var(--navWidth);
   width: 100%;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
