--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,8 +73,8 @@
         </div>
         <button type="submit">Login</button>
 
-        <p class="haveAccount">
-          Don’t have an account? <span class="register">Register</span>
+        <p class="haveAccount" >
+          Don’t have an account? <span class="register" (click)="navigate()">Register</span>
         </p>
       </form>
     </div>
