--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -159,8 +159,8 @@
 
         <button type="submit" (click)="onSubmit()">Signup</button>
 
-        <p class="haveAccount">
-          Already have an account? <span class="register">Login</span>
+        <p class="haveAccount" >
+          Already have an account? <span  class="register" (click)="navigate()">Login</span>
         </p>
       </form>
     </div>
