--- a/src/app/shared/search-bar/search-bar.component.css
+++ b/src/app/shared/search-bar/search-bar.component.css
@@ -18,3 +18,41 @@ input{
   cursor: pointer;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); /* add shadow */
 }
+.filter-button {
+  position: relative;
+  display: inline-block;
+}
+
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  z-index: 1;
+  border: 1px solid #ddd;
+}
+
+.dropdown a {
+  color: black;
+  padding: 8px 12px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #f1f1f1;
+}
+
+.filter-button:hover .dropdown {
+  display: block;
+}
