--- a/src/app/shared/invoice/invoice.component.css
+++ b/src/app/shared/invoice/invoice.component.css
@@ -1,3 +1,10 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
 .middle-box {
   box-sizing: border-box;
   display: flex;
@@ -5,12 +12,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 24px;
-  gap: 32px;
-  position: absolute;
   width: 600px;
   height: 506px;
-  left: 612px;
-  top: 155px;
   background: #ffffff;
   border: 1px solid #cbcbcb;
   border-radius: 20px;
@@ -136,9 +139,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 75%;
-  left: 38.5%;
   padding: 20px;
   font-size: 16px;
   background-color: #2952bb;
