--- a/src/app/shared/payment/payment.component.css
+++ b/src/app/shared/payment/payment.component.css
@@ -1,9 +1,14 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin-top: 100px;
+}
 .payment-box {
   display: flex;
   padding: 24px;
   position: absolute;
-  left: 40%;
-  top: 20%;
   border: 1px solid #cbcbcb;
   border-radius: 20px;
   width: 24%;
