--- a/src/app/shared/payment/payment.component.html
+++ b/src/app/shared/payment/payment.component.html
@@ -1,111 +1,113 @@
 <app-nav-bar></app-nav-bar>
-<div class="payment-box">
-  <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
-    <h1>Payment Information</h1>
-    <p>Pay securely with your Bank Account using Visa or Mastercard</p>
-    <div class="form-group">
-      <label for="credit-number">Credit Number</label>
-      <input
-        id="credit-number"
-        placeholder="XXXX-XXXX-XXXX-XXXX"
-        type="text"
-        formControlName="creditNumber"
-        [ngClass]="{
-          errorStyle:
-            paymentForm.get('creditNumber').invalid &&
-            (paymentForm.get('creditNumber').dirty ||
-              paymentForm.get('creditNumber').touched)
-        }"
-      />
-    </div>
-    <div
-      *ngIf="
-        paymentForm.get('creditNumber').invalid &&
-        (paymentForm.get('creditNumber').dirty ||
-          paymentForm.get('creditNumber').touched)
-      "
-      class="errorMessage"
-    >
-      Please type a vaild Credit Number
-    </div>
-    <div class="form-group">
-      <label for="card-name">Card Name</label>
-      <input
-        id="card-name"
-        placeholder="Mohab Ahmed"
-        type="text"
-        formControlName="cardName"
-        [ngClass]="{
-          errorStyle:
-            paymentForm.get('cardName').invalid &&
-            (paymentForm.get('cardName').dirty ||
-              paymentForm.get('cardName').touched)
-        }"
-      />
-    </div>
-    <div
-      *ngIf="
-        paymentForm.get('cardName').invalid &&
-        (paymentForm.get('cardName').dirty ||
-          paymentForm.get('cardName').touched)
-      "
-      class="errorMessage"
-    >
-      Please type a vaild Card Name
-    </div>
-    <div class="two-halfs">
-      <div>
-        <label for="expire-date">Expire Date</label>
+<div class="container">
+  <div class="payment-box">
+    <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+      <h1>Payment Information</h1>
+      <p>Pay securely with your Bank Account using Visa or Mastercard</p>
+      <div class="form-group">
+        <label for="credit-number">Credit Number</label>
         <input
-          id="expire-date"
-          type="date"
-          formControlName="expireDate"
+          id="credit-number"
+          placeholder="XXXX-XXXX-XXXX-XXXX"
+          type="text"
+          formControlName="creditNumber"
           [ngClass]="{
             errorStyle:
+              paymentForm.get('creditNumber').invalid &&
+              (paymentForm.get('creditNumber').dirty ||
+                paymentForm.get('creditNumber').touched)
+          }"
+        />
+      </div>
+      <div
+        *ngIf="
+          paymentForm.get('creditNumber').invalid &&
+          (paymentForm.get('creditNumber').dirty ||
+            paymentForm.get('creditNumber').touched)
+        "
+        class="errorMessage"
+      >
+        Please type a vaild Credit Number
+      </div>
+      <div class="form-group">
+        <label for="card-name">Card Name</label>
+        <input
+          id="card-name"
+          placeholder="Mohab Ahmed"
+          type="text"
+          formControlName="cardName"
+          [ngClass]="{
+            errorStyle:
+              paymentForm.get('cardName').invalid &&
+              (paymentForm.get('cardName').dirty ||
+                paymentForm.get('cardName').touched)
+          }"
+        />
+      </div>
+      <div
+        *ngIf="
+          paymentForm.get('cardName').invalid &&
+          (paymentForm.get('cardName').dirty ||
+            paymentForm.get('cardName').touched)
+        "
+        class="errorMessage"
+      >
+        Please type a vaild Card Name
+      </div>
+      <div class="two-halfs">
+        <div>
+          <label for="expire-date">Expire Date</label>
+          <input
+            id="expire-date"
+            type="date"
+            formControlName="expireDate"
+            [ngClass]="{
+              errorStyle:
+                paymentForm.get('expireDate').invalid &&
+                (paymentForm.get('expireDate').dirty ||
+                  paymentForm.get('expireDate').touched)
+            }"
+          />
+          <div
+            *ngIf="
               paymentForm.get('expireDate').invalid &&
               (paymentForm.get('expireDate').dirty ||
                 paymentForm.get('expireDate').touched)
-          }"
-        />
-        <div
-          *ngIf="
-            paymentForm.get('expireDate').invalid &&
-            (paymentForm.get('expireDate').dirty ||
-              paymentForm.get('expireDate').touched)
-          "
-          class="errorMessage"
-        >
-          Please Enter the date
+            "
+            class="errorMessage"
+          >
+            Please Enter the date
+          </div>
         </div>
-      </div>
 
-      <div>
-        <label for="cvv-code">CVV Code</label>
-        <input
-          id="cvv-code"
-          placeholder="XXX"
-          type="text"
-          formControlName="cvvCode"
-          [ngClass]="{
-            errorStyle:
+        <div>
+          <label for="cvv-code">CVV Code</label>
+          <input
+            id="cvv-code"
+            placeholder="XXX"
+            type="text"
+            formControlName="cvvCode"
+            [ngClass]="{
+              errorStyle:
+                paymentForm.get('cvvCode').invalid &&
+                (paymentForm.get('cvvCode').dirty ||
+                  paymentForm.get('cvvCode').touched)
+            }"
+          />
+          <div
+            *ngIf="
               paymentForm.get('cvvCode').invalid &&
               (paymentForm.get('cvvCode').dirty ||
                 paymentForm.get('cvvCode').touched)
-          }"
-        />
-        <div
-          *ngIf="
-            paymentForm.get('cvvCode').invalid &&
-            (paymentForm.get('cvvCode').dirty ||
-              paymentForm.get('cvvCode').touched)
-          "
-          class="errorMessage"
-        >
-          Please Enter the cvv code
+            "
+            class="errorMessage"
+          >
+            Please Enter the cvv code
+          </div>
         </div>
       </div>
-    </div>
 
-    <button type="submit" class="checkout-btn">Checkout</button>
-  </form>
+      <button type="submit" class="checkout-btn">Checkout</button>
+    </form>
+  </div>
 </div>
