--- a/src/app/Admin/add-bill/add-bill.component.css
+++ b/src/app/Admin/add-bill/add-bill.component.css
@@ -1,7 +1,12 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
 .frame {
   position: absolute;
-  left: 40%;
-  top: 5%;
+
   font-style: normal;
   font-family: "Poppins";
   border: 1px solid #cbcbcb;
