--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
       </a>
     </div>
     <div class="items">
-      <a routerLink="/Dash-Board/Electricty">
+      <a routerLink="/Dash-Board/Electricinavty">
         <img src="../../../assets/Lightning.svg" alt="" class="icons" />
         Electricity Bills</a
       >
